--- a/header.phtml
+++ b/header.phtml
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>EidoGo - <?php if ($title) echo $title; else echo "Go Games, Pattern Search, Joseki Tutor, SGF Editor"; ?></title>
+<title>games.shidogo - <?php if ($title) echo $title; else echo "Go Games, Pattern Search, Joseki Tutor, SGF Editor"; ?></title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="stylesheet" href="/css/site-style.css?<?=date("Ymd", filectime("css/site-style.css"))?>" type="text/css">
@@ -22,9 +22,10 @@ eidogoConfig = {enableShortcuts: true};
 </script>
 <?php } ?>
 
-<script type="text/javascript" src="/player/js/all.compressed.js?<?=date("Ymd", filectime("player/js/all.compressed.js"))?>"></script>
+<script type="text/javascript" src="/min/b=player&amp;g=player_js"></script>
+<!--script type="text/javascript" src="/player/js/all.compressed.js?<?=date("Ymd", filectime("player/js/all.compressed.js"))?>"></script-->
 
-<!-- <script type="text/javascript" src="/player/js/lang.js"></script>
+<!--script type="text/javascript" src="/player/js/lang.js"></script>
 <script type="text/javascript" src="/player/js/eidogo.js"></script>
 <script type="text/javascript" src="/player/js/util.js"></script>
 <script type="text/javascript" src="/player/i18n/en.js"></script>
@@ -33,7 +34,7 @@ eidogoConfig = {enableShortcuts: true};
 <script type="text/javascript" src="/player/js/board.js"></script>
 <script type="text/javascript" src="/player/js/rules.js"></script>
 <script type="text/javascript" src="/player/js/player.js"></script>
-<script type="text/javascript" src="/player/js/init.js"></script> -->
+<script type="text/javascript" src="/player/js/init.js"></script-->
 
 </head>
 <body>
@@ -42,23 +43,18 @@ eidogoConfig = {enableShortcuts: true};
     
     <div id="header">
 
-        <h1><a href='/'>Eido<span>Go</span></a></h1>
+        <h1><a href='/'>games.<span>shidogo</span>.com</a></h1>
 
         <p id="ownership">
-            EidoGo is <a href="/source">Open Source &mdash; Embed it in your website!</a>
-            &nbsp;Created by <script type="text/javascript">document.write("<n uers=\"znvygb:wx\100gva\056ah\">Whfgva Xenzre<\057n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>.
+            This part of Shidogo is based on EidoGo, which is <a href="/source">Open Source!</a>
+            &nbsp;
         </p>
 
         <ul id="links">
-            <li><a href="/#kjd">Joseki Tutor</a></li>
-            <li><a href="/#search">Pattern Search</a></li>
-            <li><a href="/tourney">Games</a></li>
-            <li><a href="/problems">Problems</a></li>
+	    <li style="float:right"><a href="http://www.shidogo.com">Back to Shidogo.com</a></li>
             <li><a href="/upload">Upload</a></li>
-            <li><a href="/#gnugo">Play GNU Go</a></li>
             <li><a href="/#blank">Blank Board</a></li>
-            <li><a href="http://senseis.xmp.net/?EidoGo">Latest Updates</a></li>
-            <li><a href="/ff-extension">Firefox Extension</a></li>
+	    <li><a href="http://www.shidogo.com">Back to Shidogo.com</a></li>
         </ul>
 
     </div>
