--- a/header.phtml
+++ b/header.phtml
@@ -46,7 +46,7 @@ eidogoConfig = {enableShortcuts: true};
         <h1><a href='/'>games.<span>shidogo</span>.com</a></h1>
 
         <p id="ownership">
-            This part of Shidogo is based on EidoGo, which is <a href="/source">Open Source!</a>
+            This part of Shidogo is based on EidoGo, and both are <a href="/source">Open Source!</a>
             &nbsp;
         </p>
 
@@ -55,6 +55,7 @@ eidogoConfig = {enableShortcuts: true};
             <li><a href="/upload">Upload</a></li>
             <li><a href="/#blank">Blank Board</a></li>
 	    <li><a href="http://www.shidogo.com">Back to Shidogo.com</a></li>
+	    <li><a style="color:#770000" href="/help">How to Embed in a Shidogo post</a></li>
         </ul>
 
     </div>
