Updated help and source pages

--- a/help.phtml
+++ b/help.phtml
@@ -5,12 +5,13 @@
 <h2>How to Embed a Board into a Shidogo Post</h2>
 <p>Embedding a board is very easy. There are two ways to make a link to embed into a Shidogo post:</p>
 <br />
-<h3>Method 1: Save to Server</h3>
+<h3 style="font-size:24px; padding-bottom:10px">Method 1: Save to Server</h3>
 <img src="/images/savetoserver.png" />
 <p>When you are editing a board, after you click the "Save to Server" link, a red link will pop up in the comment box. Copy/paste this into your post, and the board will be embedded.
 </p>
+<p>Done!</p>
 <br />
-<h3>Method 2: Permalink</h3>
+<h3 style="font-size:24px; padding:20px 0 10px 0">Method 2: Permalink</h3>
 <p>If you are just looking at a game, you can always click the "permalink" link:</p>
 <img src="/images/permalink.png" />
 <p>Then your web browser's url bar will magically change:</p>
