--- a/source.phtml
+++ b/source.phtml
@@ -27,9 +27,9 @@
 
 <p>You can also do the same with games.shidogo's source code:</p>
 <ol>
-	<li><p><a href="http://github.com/D-Jazz/games.shidogo">Browse or download it via the web</a></p></li>
+	<li><p><a href="http://github.com/mindeavor/games.shidogo">Browse or download it via the web</a></p></li>
 	<li><p>Clone the repository with git:</p>
-	<pre><code>git://github.com/D-Jazz/games.shidogo.git games.shidogo</pre></code>
+	<pre><code>git://github.com/mindeavor/games.shidogo.git games.shidogo</pre></code>
 </ol>
 
 </div>
